[package]
name = "maelstrom-rust"
version = "0.1.0"
edition = "2024"
authors = ["Gabriel Saiago"]
description = "A crate designed to help you solve maelstrom exercises"
readme = "README.md"
repository = "https://github.com/Grsaiago/maelstrom-rust"
keywords = ["distributed systems", "maelstrom", "gossip glomers"]

[lib]
name = "maelstrom_rust"
crate-type = ["lib"]


[dependencies]
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1.42.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
